RESOLVED FIXED 245909
CoordinatedGraphicsLayer is missing ENABLE(SCROLLING_THREAD) guards
https://bugs.webkit.org/show_bug.cgi?id=245909
Summary CoordinatedGraphicsLayer is missing ENABLE(SCROLLING_THREAD) guards
Don Olmstead
Reported 2022-09-30 16:16:50 PDT
....
Attachments
Don Olmstead
Comment 1 2022-09-30 16:18:19 PDT
EWS
Comment 2 2022-10-02 09:20:16 PDT
Committed 255074@main (cf82b246561c): <https://commits.webkit.org/255074@main> Reviewed commits have been landed. Closing PR #4887 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-10-02 09:21:18 PDT
Note You need to log in before you can comment on or make changes to this bug.