CoordinatedGraphicsLayer is missing ENABLE(SCROLLING_THREAD) guards https://bugs.webkit.org/show_bug.cgi?id=245909

Reviewed by Myles C. Maxfield.

* Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedGraphicsLayer.cpp:
* Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedGraphicsLayer.h:

Canonical link: https://commits.webkit.org/255074@main